--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -10,7 +10,7 @@
         <android.support.design.widget.AppBarLayout
             android:id="@+id/id_appbar"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="280dp"
             android:fitsSystemWindows="true">
 
             <android.support.design.widget.CollapsingToolbarLayout
@@ -20,12 +20,11 @@
                 android:layout_height="match_parent"
                 app:layout_scrollFlags="scroll|enterAlways">
 
-                <ImageView
+                <android.support.v4.view.ViewPager
                     android:id="@+id/background_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
-                    android:src="@mipmap/ic_launcher"
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax" />
 
