--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -105,10 +105,17 @@
             </android.support.v7.widget.CardView>
 
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/casts_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </android.support.v7.widget.RecyclerView>
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="30dp"
                 app:cardUseCompatPadding="true"
                 app:cardCornerRadius="8dp">
 
@@ -133,6 +140,21 @@
 
             </android.support.v7.widget.CardView>
 
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                app:cardUseCompatPadding="true"
+                app:cardCornerRadius="8dp">
+
+                <Button
+                    android:id="@+id/movie_trailer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/trailer"
+                    android:layout_gravity="center"/>
+
+            </android.support.v7.widget.CardView>
         </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
 
