--- a/app/src/main/res/layout/background_image_layout.xml
+++ b/app/src/main/res/layout/background_image_layout.xml
@@ -4,10 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
+
+        <TextView
+            android:id="@+id/viewpager_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1/3"
+            android:layout_gravity="right"
+            android:padding="16dp"
+            android:textSize="22sp"/>
+
+    </FrameLayout>
 
 </LinearLayout>
