--- a/app/src/main/res/layout/casts_row_layout.xml
+++ b/app/src/main/res/layout/casts_row_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:padding="8dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -10,7 +11,7 @@
         android:id="@+id/circle_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_gravity="center"
+        android:gravity="center"
         android:padding="8dp"/>
     <TextView
         android:id="@+id/name"
