--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawer"
+        android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,7 +18,9 @@
                 android:layout_width="match_parent"
                 android:fitsSystemWindows="true"
                 android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll|enterAlways">
+                app:title="YIFY"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/background_image"
@@ -34,7 +36,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="?actionBarSize"
                     android:theme="@style/toolbarTheme"
-                    app:layout_scrollFlags="scroll|enterAlways"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
@@ -143,7 +144,7 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="50dp"
                 app:cardUseCompatPadding="true"
                 app:cardCornerRadius="8dp">
 
