--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -55,8 +55,7 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="270dp"
-                app:cardUseCompatPadding="true"
-                app:cardCornerRadius="8dp">
+                app:cardCornerRadius="4dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -117,8 +116,7 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:cardUseCompatPadding="true"
-                app:cardCornerRadius="8dp">
+                app:cardCornerRadius="4dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -145,29 +143,55 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
-                app:cardUseCompatPadding="true"
-                app:cardCornerRadius="8dp">
+                app:cardCornerRadius="4dp">
 
-                <Button
+                <!--<Button
                     android:id="@+id/movie_trailer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/trailer"
                     android:layout_gravity="center"/>
-
+-->
             </android.support.v7.widget.CardView>
         </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:weightSum="3">
+
+        <Button
+            android:id="@+id/movie_trailer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:layout_weight="1"
+            android:layout_marginEnd="1dp"
+            android:background="@drawable/ripple_button_background"
+            android:text="Trailer"/>
 
         <Button
             android:id="@+id/download_torrent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:background="@android:color/holo_green_light"
-            android:text="Download Torrent"
-            android:layout_gravity="bottom"/>
+            android:layout_weight="1"
+            android:layout_marginEnd="1dp"
+            android:background="@drawable/ripple_button_background"
+            android:text="720p"/>
+        <Button
+            android:id="@+id/download_torrent_1080p"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/ripple_button_background"
+            android:text="1080p"/>
+
+    </LinearLayout>
 
 
     </android.support.design.widget.CoordinatorLayout>
