--- a/app/src/main/res/layout/recyclerview_single_row.xml
+++ b/app/src/main/res/layout/recyclerview_single_row.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/black"
+    app:cardBackgroundColor="@android:color/black"
+    app:cardUseCompatPadding="true">
 
     <ImageView
         android:id="@+id/movie_image"
         android:layout_width="match_parent"
         android:layout_height="270dp"
-        android:transitionName="coverImage"/>
+        android:transitionName="coverImage"
+        android:padding="8dp"/>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
